<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AmountViewActivity">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="291dp"
        android:layout_height="47dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="48dp"
        android:gravity="center"
        android:text="@string/config_title"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_configAmount"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="46dp"
        android:text="@string/config_amount"
        app:layout_constraintTop_toBottomOf="@+id/textView_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_configFail"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="46dp"
        android:text="@string/config_fail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_configAmount"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_configMachines"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="46dp"
        android:text="@string/config_slaves"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_configFail"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_configInitialize"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="46dp"
        android:text="@string/config_initialize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_configMachines"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bt_configtBack"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="24dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>