<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AmountCheckActivity">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="291dp"
        android:layout_height="47dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/amount_title"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/subchild1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/subchild1"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/chargecheck_child1_title"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/subchild2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/chargecheck_child2_title"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subchild1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/subchild3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/chargecheck_child3_title"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subchild2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/subchild4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/chargecheck_child4_title"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subchild3"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/subchild5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/chargecheck_child5_title"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subchild4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/subchild6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/chargecheck_child6_title"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subchild5"
        tools:ignore="MissingConstraints" />


    <ProgressBar
        android:id="@+id/childbar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="208dp"
        android:layout_height="29dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_title"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/childbar2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="208dp"
        android:layout_height="31dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childbar1"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/childbar3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="208dp"
        android:layout_height="29dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childbar2"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/childbar4"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="208dp"
        android:layout_height="29dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childbar3"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/childbar5"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="208dp"
        android:layout_height="29dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childbar4"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/childbar6"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="208dp"
        android:layout_height="29dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childbar5"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>